docs 修正获取白板列表的返回值结构体签名
